--- a/pi.html
+++ b/pi.html
@@ -24,7 +24,7 @@
 
         <footer> 
             <p id="droits" class="center"> Erik 2021 - GPL v3.0 </p> 
-            <a href="https://github.com/edre2" target="_blank">Code source</a>
+            <a href="https://github.com/Edre2/pi" target="_blank">Code source</a>
           </footer>
     </body>
 </html>
