Add new features

--- a/pi.html
+++ b/pi.html
@@ -10,7 +10,7 @@
 
     <body>
         <div id="main">
-            <div class="center"><h1>π</h1></div>
+            <div class="center"><h1><a href="index.html">π</a></h1></div>
             <div id="pi">
                 <!-- Endroit où entrer pi -->
                 <textarea class="text_input" type="text" name="pi_value" id="pi_value" placeholder="Entrez π" autofocus></textarea>
@@ -23,7 +23,7 @@
         </div>
 
         <footer> 
-            <p id="droits" class="center"> Erik 2021 - GPL v3.0 </p> 
+            <p id="droits" class="center"> Erik 2021 - GPL v3</p> 
             <a href="https://github.com/Edre2/pi" target="_blank">Code source</a>
           </footer>
     </body>
