Change font and remove typos

--- a/apprendre-major-system.html
+++ b/apprendre-major-system.html
@@ -4,6 +4,7 @@
         <!-- En-tête de la page -->
         <meta charset="utf-8" />
         <link rel="stylesheet" href="pi.css" />
+        <link rel="shortcut icon" href="pi.png">
         <script type="text/javascript" src="verifier_association.js"></script>
         <title>π</title>
     </head>
@@ -23,8 +24,8 @@
         </div>
 
         <footer> 
-            <p id="droits" class="center"> Erik 2021 - GPL v3.0 </p> 
-            <a href="https://gitdub.com/Edre2/pi" target="_blank">Code source</a>
+            <p id="droits" class="center"> Erik 2022 - GPL v3</p> 
+            <a href="https://github.com/Edre2/pi" target="_blank">Code source</a>
           </footer>
     </body>
 </html>
