--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <!-- En-tête de la page -->
         <meta charset="utf-8" />
         <link rel="stylesheet" href="pi.css" />
+        <link rel="shortcut icon" href="pi.png">
+        <link rel="shortcut icon" href="pi.png">
         <title>π</title>
     </head>
 
@@ -26,7 +28,7 @@
         </div>
 
         <footer> 
-            <p id="droits" class="center"> Erik 2021 - GPL v3.0 </p> 
+            <p id="droits" class="center"> Erik 2022 - GPL v3</p> 
             <a href="https://github.com/Edre2/pi" target="_blank">Code source</a>
           </footer>
     </body>
