--- a/major_system.html
+++ b/major_system.html
@@ -4,6 +4,7 @@
         <!-- En-tête de la page -->
         <meta charset="utf-8" />
         <link rel="stylesheet" href="pi.css" />
+        <link rel="shortcut icon" href="pi.png">
         <title>π</title>
     </head>
 
@@ -29,399 +30,398 @@
                      <tr>
                         <td>3</td>
                         <td>amis / semer / mat</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>4</td>
                         <td>rat</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>5</td>
                         <td>lion</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>6</td>
                         <td>chat / chien</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>7</td>
                         <td>quai</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>8</td>
                         <td>fou</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>9</td>
                         <td>épée</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>10</td>
                         <td>danser / tasse</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>11</td>
                         <td>tante</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>12</td>
                         <td>tonneau </td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>13</td>
                         <td>dame</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>14</td>
                         <td>taureau</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>15</td>
                         <td>talon</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>16</td>
                         <td>Tuches</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>17</td>
                         <td>taguer</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>18</td>
                         <td>étoffe / dauphin </td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>19</td>
                         <td>taper / tapis</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>20</td>
                         <td>noce</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>21</td>
                         <td>Nathan</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>22</td>
                         <td>naine</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>23</td>
                         <td>nem</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>24</td>
                         <td>noir</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>25</td>
                         <td>noël</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>26</td>
                         <td>neige</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>27</td>
                         <td>Naka</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>28</td>
                         <td>naïf / navet / navire</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>29</td>
                         <td>nappe</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>30</td>
                         <td>masser</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>31</td>
                         <td>maths </td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>32</td>
                         <td>mine</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>33</td>
                         <td>maman</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>34</td>
                         <td>sous-marin </td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>35</td>
                         <td>malle</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>36</td>
                         <td>manger / magie</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>37</td>
                         <td>magasin</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>38</td>
                         <td>muffin</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>39</td>
                         <td>myope</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>40</td>
                         <td>rasoir</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>41</td>
                         <td>route</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>42</td>
                         <td>ruine</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>43</td>
                         <td>rame</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>44</td>
                         <td>rire</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>45</td>
                         <td>râler </td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>46</td>
                         <td>ruche </td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>47</td>
                         <td>raquette </td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>48</td>
                         <td>ravin </td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>49</td>
                         <td>robot</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>50</td>
                         <td>lasso</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>51</td>
                         <td>latte</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>52</td>
                         <td>lune</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>53</td>
                         <td>lama</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>54</td>
                         <td>lire</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>55</td>
                         <td>lilas / soleil </td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>56</td>
                         <td>luge</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>57</td>
                         <td>lac</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>58</td>
                         <td>lave</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>59</td>
                         <td>lapin</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>60</td>
                         <td>chasser</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>61</td>
                         <td>château</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>62</td>
                         <td>chaîne </td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>63</td>
                         <td>chameau</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>64</td>
                         <td>char</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>65</td>
                         <td>châle</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>66</td>
                         <td>juge</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>67</td>
                         <td>échec</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>68</td>
                         <td>cheveu</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>69</td>
                         <td>jeep / jupe / chapeau</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>70</td>
                         <td>gaz / caisse</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>71</td>
                         <td>gâteau /  cadeau</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>72</td>
                         <td>gainer / canon</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>73</td>
                         <td>Camus / camion</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>74</td>
                         <td>craie</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>75</td>
                         <td>gueuler / clou / colle</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>76</td>
                         <td>cage </td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>77</td>
                         <td>caca</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>78</td>
                         <td>café</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>79</td>
                         <td>cape</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>80</td>
                         <td>vase / fusée </td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>81</td>
                         <td>fête</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>82</td>
                         <td>vanne</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>83</td>
                         <td>affamé / fumée</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>84</td>
                         <td>phare</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>85</td>
                         <td>vallée / vélo / valet</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>86</td>
                         <td>vache</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>87</td>
                         <td>phoque</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>88</td>
                         <td>fève</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>89</td>
                         <td>vampire</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>90</td>
                         <td>bus</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>91</td>
                         <td>patte / batte</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>92</td>
                         <td>panneau</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>93</td>
                         <td>puma</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>94</td>
                         <td>purée </td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>95</td>
                         <td>palais</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>96</td>
                         <td>poncho / page</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>97</td>
                         <td>paquet / pâque </td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>98</td>
                         <td>paver</td>
-                     <tr>
+                     </tr>
                      <tr>
                         <td>99</td>
                         <td>bébé</td>
-                     <tr>
-
+                     </tr>
                   </table>
             </div>
         </div>
 
         <footer> 
-            <p id="droits" class="center"> Erik 2021 - GPL v3.0 </p> 
-            <a href="https://gitdub.com/Edre2/pi" target="_blank">Code source</a>
+            <p id="droits" class="center"> Erik 2022 - GPL v3</p> 
+            <a href="https://github.com/Edre2/pi" target="_blank">Code source</a>
           </footer>
     </body>
 </html>
