--- a/pi.html
+++ b/pi.html
@@ -4,6 +4,7 @@
         <!-- En-tête de la page -->
         <meta charset="utf-8" />
         <link rel="stylesheet" href="pi.css" />
+        <link rel="shortcut icon" href="pi.png">
         <script type="text/javascript" src="verifier.js"></script>
         <title>π</title>
     </head>
@@ -23,7 +24,7 @@
         </div>
 
         <footer> 
-            <p id="droits" class="center"> Erik 2021 - GPL v3</p> 
+            <p id="droits" class="center"> Erik 2022 - GPL v3</p> 
             <a href="https://github.com/Edre2/pi" target="_blank">Code source</a>
           </footer>
     </body>
