--- a/pi_valeur.html
+++ b/pi_valeur.html
@@ -4,6 +4,7 @@
         <!-- En-tête de la page -->
         <meta charset="utf-8" />
         <link rel="stylesheet" href="pi.css" />
+        <link rel="shortcut icon" href="pi.png">
         <title>π</title>
     </head>
 
