Update des mots & changement de structure poour le js

--- a/apprendre-major-system.html
+++ b/apprendre-major-system.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <link rel="stylesheet" href="pi.css" />
         <link rel="shortcut icon" href="pi.png">
-        <script type="text/javascript" src="verifier_association.js"></script>
+        <script type="text/javascript" src="js/verifier_association.js"></script>
         <title>π</title>
     </head>
 
