--- a/major_system.html
+++ b/major_system.html
@@ -109,7 +109,7 @@
                      </tr>
                      <tr>
                         <td>23</td>
-                        <td>nem</td>
+                        <td>nem / nam</td>
                      </tr>
                      <tr>
                         <td>24</td>
@@ -117,7 +117,7 @@
                      </tr>
                      <tr>
                         <td>25</td>
-                        <td>noël</td>
+                        <td>Noël</td>
                      </tr>
                      <tr>
                         <td>26</td>
@@ -125,7 +125,7 @@
                      </tr>
                      <tr>
                         <td>27</td>
-                        <td>Naka</td>
+                        <td>Naka (mura)</td>
                      </tr>
                      <tr>
                         <td>28</td>
@@ -177,7 +177,7 @@
                      </tr>
                      <tr>
                         <td>40</td>
-                        <td>rasoir</td>
+                        <td>raser</td>
                      </tr>
                      <tr>
                         <td>41</td>
@@ -249,7 +249,7 @@
                      </tr>
                      <tr>
                         <td>58</td>
-                        <td>lave</td>
+                        <td>lave / laver</td>
                      </tr>
                      <tr>
                         <td>59</td>
@@ -341,7 +341,7 @@
                      </tr>
                      <tr>
                         <td>81</td>
-                        <td>fête</td>
+                        <td>fête / foot</td>
                      </tr>
                      <tr>
                         <td>82</td>
@@ -389,7 +389,7 @@
                      </tr>
                      <tr>
                         <td>93</td>
-                        <td>puma</td>
+                        <td>puma / pomme</td>
                      </tr>
                      <tr>
                         <td>94</td>
@@ -409,7 +409,7 @@
                      </tr>
                      <tr>
                         <td>98</td>
-                        <td>paver</td>
+                        <td>paver / baver / baffer</td>
                      </tr>
                      <tr>
                         <td>99</td>
