--- a/pi.html
+++ b/pi.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <link rel="stylesheet" href="pi.css" />
         <link rel="shortcut icon" href="pi.png">
-        <script type="text/javascript" src="verifier.js"></script>
+        <script type="text/javascript" src="js/verifier.js"></script>
         <title>π</title>
     </head>
 
