Changement des titres, ajout d'une page et update du css

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         <meta charset="utf-8" />
         <link rel="stylesheet" href="pi.css" />
         <link rel="shortcut icon" href="pi.png">
-        <link rel="shortcut icon" href="pi.png">
-        <title>π</title>
+        <title>π - Index</title>
     </head>
 
     <body>
@@ -20,6 +19,8 @@
                         <li><h2><a href="pi_histoire.html">Une histoire pour apprendre 200 décimales de π</a></h2></li>
                         <li><h2><a href="major_system.html">Association entre les nombres et les mots</a></h2></li>
                         <li><h2><a href="apprendre-major-system.html">Apprendre les associations entre nombres et mots</a></h2></li>
+                        <li><h2><a href="explications.html">Explications</a></h2></li>
+
 
                         <!-- <li><h2><a href=""></a></h2></li> -->
                     </ul>
