--- a/major_system.html
+++ b/major_system.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <link rel="stylesheet" href="pi.css" />
         <link rel="shortcut icon" href="pi.png">
-        <title>π</title>
+        <title>Major system</title>
     </head>
 
     <body>
