--- a/pi.html
+++ b/pi.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="pi.css" />
         <link rel="shortcut icon" href="pi.png">
         <script type="text/javascript" src="js/verifier.js"></script>
-        <title>π</title>
+        <title>π - Apprendre</title>
     </head>
 
     <body>
