--- a/apprendre-major-system.html
+++ b/apprendre-major-system.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="pi.css" />
         <link rel="shortcut icon" href="pi.png">
         <script type="text/javascript" src="js/verifier_association.js"></script>
-        <title>π</title>
+        <title>π - Apprendre Major System</title>
     </head>
 
     <body onload="random_number()">
