change file names

--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
                 <div class="center">
                     <ul>
                         <li><h2><a href="pi.html">Apprendre π</a></h2></li>
-                        <li><h2><a href="pi_valeur.html">10 000 décimales de π</a></h2></li>
-                        <li><h2><a href="pi_histoire.html">Une histoire pour apprendre 200 décimales de π</a></h2></li>
-                        <li><h2><a href="major_system.html">Association entre les nombres et les mots</a></h2></li>
+                        <li><h2><a href="pi-valeur.html">10 000 décimales de π</a></h2></li>
+                        <li><h2><a href="pi-histoire.html">Une histoire pour apprendre 200 décimales de π</a></h2></li>
+                        <li><h2><a href="major-system.html">Association entre les nombres et les mots</a></h2></li>
                         <li><h2><a href="apprendre-major-system.html">Apprendre les associations entre nombres et mots</a></h2></li>
                         <li><h2><a href="explications.html">Explications</a></h2></li>
+                        <li><h2><a href="apprendre-suite.html">Apprendre une suite de nombres</a></h2></li>
 
 
                         <!-- <li><h2><a href=""></a></h2></li> -->
