Ajout d'une nouvelle page (Apprendre une suite de nombres)

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <meta charset="utf-8" />
         <link rel="stylesheet" href="pi.css" />
         <link rel="shortcut icon" href="pi.png">
-        <title>π - Index</title>
+        <title>Index</title>
     </head>
 
     <body>
         <div id="main">
-            <div class="center"><h1><a href="index.html">π</a></h1></div>
+            <div class="center"><h1><a href="index.html">Mémoire</a></h1></div>
             <div id="pi">
                 <div class="center">
                     <ul>
