--- a/apprendre-suite.html
+++ b/apprendre-suite.html
@@ -21,7 +21,7 @@
                         <button id="verifier" class="button fill"    onclick="cacher_suite()">Cacher la suite</button>
                     </div>
                 <div class="milieu espace-haut-bas">
-                    <input type="text" id="suite-memoire" class="espace-caracters text-centre" autofocus> <br /><br />
+                    <input type="text" id="suite-memoire" class="espace-caracters text-centre"> <br /><br />
                 </div>
                 <div class="center espace-haut-bas">
                     <p id="correction"></p>
