--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
             <div id="pi">
                 <div class="center">
                     <ul>
+                        <h1>π</h1>
                         <li><h2><a href="pi.html">Apprendre π</a></h2></li>
                         <li><h2><a href="pi-valeur.html">10 000 décimales de π</a></h2></li>
                         <li><h2><a href="pi-histoire.html">Une histoire pour apprendre 200 décimales de π</a></h2></li>
+                        <h1>Major system</h1>
                         <li><h2><a href="major-system.html">Association entre les nombres et les mots</a></h2></li>
                         <li><h2><a href="apprendre-major-system.html">Apprendre les associations entre nombres et mots</a></h2></li>
                         <li><h2><a href="explications.html">Explications</a></h2></li>
+                        <h1>Entraînement</h1>
                         <li><h2><a href="apprendre-suite.html">Apprendre une suite de nombres</a></h2></li>
 
 
