--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                         <li><h2><a href="explications.html">Explications</a></h2></li>
                         <h1>Entraînement</h1>
                         <li><h2><a href="apprendre-suite.html">Apprendre une suite de nombres</a></h2></li>
+                        <li><h2><a href="apprendre-des-suites.html">Apprendre des suites de nombres</a></h2></li>
 
 
                         <!-- <li><h2><a href=""></a></h2></li> -->
