--- a/apprendre-des-suites.html
+++ b/apprendre-des-suites.html
@@ -31,13 +31,13 @@
                         <button id="verifier" class="button fill"    onclick="restituer_suites()">Restituer les suites</button>
                     </div>
 
-                    <div class="milieu espace-haut-bas">
+                    <!-- <div class="milieu espace-haut-bas">
                         <input type="text" id="suite-memoire" class="espace-caracters text-centre"> 
-                    </div>
+                    </div> 
 
                     <div class="center espace-haut-bas">
-                        <p id="correction" class="text-centre">En dévellopement</p>
-                    </div>
+                        <p id="correction" class="text-centre">En développement</p>
+                    </div> -->
                 </div>
         </div>
 
